--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-hook-form": "^7.20.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "recharts": "^2.1.6"
   },
   "scripts": {
     "eject": "react-scripts eject",
